# my-python-modules

./: Chezmoi.py  Dziennik.py  Jupyter.py  Shell.py  pyproject.toml
Moje/: Chezmoi.py  __init__.py
my_python_modules/: Ansys.py  Tools.py  __init__.py
