[project]
name = "Moje"
description = "My python modules"
dynamic = ['version']
authors = [{ name = "Dawid Sowa", email = "dawid_sowa@posteo.net" }]

# dependencies = ["pyspark[ml]", "sklearn"]
# [project.optional-dependencies]
# dev = ["tox", "pre-commit", "bump2version"]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
